# tools-automation

./: .agent-system.conf  .env.example  .gitattributes  .gitignore  .gitmodules  .releaserc.json  .swiftformat  .swiftlint.yml  .yamllint  AGENT_BACKGROUND_OPERATION_PLAN.md  AGENT_ENHANCEMENT_MASTER_PLAN.md  AGENT_SYSTEM_README.md  AGENT_TEST_COVERAGE_ENHANCEMENT.md  AI_ANALYSIS_20251107.md  AI_CODE_REVIEW_20251107.md  AI_MONITORING_GUIDE.md  AUTONOMOUS_OPERATIONS_SUMMARY.md  AUTONOMOUS_SYSTEM_README.md  AUTONOMY.md  AUTONOMY_QUICK_REF.md  AutonomousArchitectureEvolution.swift  AutonomousArchitectureEvolutionTypes.swift  AutonomousDeployment.swift  AutonomousDeploymentTypes.swift  AutonomousIntelligenceEcosystems.swift  CLEANUP.md  CLOUD_DEPLOYMENT_README.md  CONTRIBUTING.md  ConsciousnessExpanders.swift  ConsciousnessExpansionFrameworks.swift  ConsciousnessIntegrators.swift  ConsciousnessMonitors.swift  ConsciousnessNetworks.swift  CrossDimensionalConsistencyAlgorithms.swift  DESKTOP_APP_CLOUD_SETUP_GUIDE.md  DESKTOP_APP_MISSING_IMPLEMENTATION.md  DimensionalBoundaryManagement.swift  DimensionalComputingFrameworks.swift  DistributedSystemsArchitecture.swift  Dockerfile  (+567 more)
sdk/python/: README.md  pyproject.toml  pytest.ini  setup.py
sdk/python/docs/: conf.py
sdk/python/docs/_build/doctrees/: environment.pickle  index.doctree
sdk/python/docs/_build/html/: .buildinfo  (+2 more)
sdk/python/examples/: basic_usage.py
sdk/python/mcp_sdk/: __init__.py
sdk/python/mcp_sdk.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
sdk/python/tests/: test_mcp_sdk.py
(+6665 files in other folders)
