[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-sdk"
version = "1.0.0"
description = "Python SDK for MCP (Model Context Protocol) server"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["mcp", "sdk", "api", "client", "automation"]
authors = [ { name = "Tools Automation", email = "sdk@tools-automation.com" } ]
license = { text = "MIT" }
urls = { "Homepage" = "https://github.com/dboone323/tools-automation", "Bug Reports" = "https://github.com/dboone323/tools-automation/issues" }

dependencies = [
  "aiohttp>=3.8.0",
  "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "black>=22.0.0",
  "isort>=5.10.0",
  "mypy>=1.0.0",
  "flake8>=4.0.0",
]

[project.scripts]
"mcp-cli" = "mcp_sdk:main"
